# koan

./: .branch-cleanup-tracker.json  .gitignore  .last-review-sha  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  RAILWAY.md  README.md  bridge.py  docker-compose.yml  docker-entrypoint.sh  env.example  projects.example.yaml  pyproject.toml  run.sh
.github/workflows/: release.yml  request-review.yml  tests.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: README.md  bridge-watchdog.md  github-commands.md  issue-tracker.md  provider-claude.md  provider-codex.md  provider-local.md  skills.md  spec-always-up-railway.md  user-manual.md
docs/architecture/: daemon.md  github-and-trackers.md  memory.md  mission-lifecycle.md  shared-state.md  skills-system.md
docs/messaging/: discord.md  github-commands.md  github-webhooks.md  jira-integration.md  slack.md  (+2 more)
instance.example/: README.md  config.yaml  mission-report.md  missions.md  outbox.md  soul.md  usage.md
koan/: .branch-cleanup-tracker.json  CLAUDE.md  awake.py  conftest.py  daily_report.py  dashboard.py  extract_mission.py  notify.py  recover.py  requirements.txt  run.sh  start.sh  system-prompt.md  test_awake.py  test_daily_report.py  test_dashboard.py  test_memory.py  test_mission_summary.py  test_notify.py  test_recover.py
scripts/: update_coverage_baseline.sh
specs/: README.md
workspace/: .gitignore  README.md
(+750 files in other folders)
