[project]
name = "koan"
version = "0.1.0"
description = "Autonomous background agent using idle Claude API quota"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["koan/tests"]
pythonpath = ["koan"]
filterwarnings = [
    "error::ResourceWarning",
]
markers = [
    "slow: marks tests as slow (run in dedicated CI groups)",
]
timeout = 60

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*"]
parallel = true

[tool.coverage.report]
show_missing = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
